Update CorsConfig for CORS issue